--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "grunt-svgmin": "~0.1.0",
     "grunt-concurrent": "~0.1.0",
     "matchdep": "~0.1.1",
-    "connect-livereload": "~0.2.0"
+    "connect-livereload": "~0.2.0",
+    "hardy": "0.0.7"
   },
   "engines": {
     "node": ">=0.8.0"
+  },
+  "scripts": {
+    "test": "node_modules/hardy/bin/hardy --browser=firefox,phantomjs test/css"
   }
 }
