Relying on bower - including bower

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "grunt-concurrent": "~0.1.0",
     "matchdep": "~0.1.1",
     "connect-livereload": "~0.2.0",
-    "hardy": "0.0.8"
+    "hardy": "0.0.8",
+    "bower": "~1.0.3"
   },
   "engines": {
     "node": ">=0.8.0"
