--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_script:
   - export DISPLAY=:99.0            # Only for Firefox
   - sh -e /etc/init.d/xvfb start    # Only for Firefox
   - node_modules/hardy/bin/hardy selenium start
+  - gem install compass
   - firefox --version
   - phantomjs --version
   - bower install
