--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {},
   "devDependencies": {
+    "yeoman": "~0.9.1",
     "grunt-cli": "~0.1.9",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-concat": "~0.1.3",
