--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,10 @@ before_script:
   - cd dist
   - python -m SimpleHTTPServer&                   # HARDY
   - cd ..
+after_success:
+  - git add dist
+  - git commit -m"Updating site after successful build"
+  - git subtree push --prefix dist origin gh-pages
 env:
   global:
     - secure: "Tf43m4KJW3jC8sUp5nLgzDciHU5YZ4V4wwmFKFXYu3G5ElYRQO5AqGvRc+dCuPPUYXeu9AlMzxiB5bVNyDK7zl7ez+bdnTu+z/r5Bxle397NFhmfE4yrsnVky8UKlUCQRCouaG5YyrtzadpRb7hVGj2cemSpbDBkRhOCJcjhJDE="
