--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_script:
   - cd ../dist
   - python -m SimpleHTTPServer&                   # HARDY
   - cd ..
-after_script:
+after_success:
   - bash post_build.sh
 env:
   global:
